--- a/mtw.html
+++ b/mtw.html
@@ -76,11 +76,11 @@
     
    <li>9:30-11:10. Graph algorithms session
        <ul>
-           <li>Goran Zuric
+           <li>Ola Svensson
                </li>
-           <li>Michael Kapralov
+           <li>James Lee
                </li>
-           </ul>
+            </ul>
        </li>
    <li> 11:10-11:40. Coffee break
    <li>11:40-12:40. Plenary session
@@ -157,8 +157,10 @@
            <li> 11:10-11:40. Coffee break
            <li>11:40-13:20. Graph algorithms session
                <ul>
-                   <li>TBD</li>
-                   <li>TBD
+                   <li>Goran Zuric
+                       </li>
+                   <li>Michael Kapralov
+                       </li>
                    </li>
                    </li>
     </ul>
