--- a/mtw.html
+++ b/mtw.html
@@ -121,7 +121,7 @@
        <li> 11:10-11:40. Coffee break
        <li>11:40-12:40. Plenary session
            <ul>
-               <li>TBD</li>
+               <li>Yael Tauman-Kalai</li>
                </ul
                </li>
        <li>12:40-14:10. Lunch</li>
