--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ CUHK<br>
    <li>have chaired the organizing committee for a workshop on <a href=https://simons.berkeley.edu/workshops/si2021-3>average-case complexity in statistical problems</a> at the <a href=https://simons.berkeley.edu/>Simons Institute</a> in Berkeley
    <p>
    
-   <li>am organizing a workshop on <i>spectral and convex optimization techniques in graph algorithms</i>, to be held in Milan on June 15-18 (more information forthcoming)
+   <li>am organizing a workshop on <a href="mtw.html"><i>spectral and convex optimization techniques in graph algorithms</i></a>, to be held in Milan on June 15-18 
        
        <p>
        
