--- a/mtw.html
+++ b/mtw.html
@@ -93,7 +93,7 @@
        <ul>
            <li>Giulio Malavolta
                </li>
-           <li>Maciej Obremsky
+           <li>Maciej Obremsky: <i>Non-malleability and Randomness</i>
                </li>
            </ul>
    <li>15:50-16:20. Coffee break</li>
@@ -112,9 +112,9 @@
        
        <li>9:30-11:10. Cryptography session
            <ul>
-               <li>Benny Applebaum
+               <li>Jad Siblak
                    </li>
-               <li>Masayuki Abe
+               <li>Noam Mazor: <i>On the complexity of Two-Party Differential Privacy</i>
                    </li>
                </ul>
            </li>
