--- a/mtw.html
+++ b/mtw.html
@@ -147,7 +147,7 @@
        <li>16:20-18:00. Cryptography session</li>
            <ul>
                <li>Chethan Kamath (Tel Aviv): <i>On Treewidth, Separators and Yao's Garbling</i></li>
-               <li>Vlad Kolesnikov (Aalto U): <i>TBA</i></li>
+               <li>Chris Brzuska (Aalto U): <i>TBA</i></li>
            </ul>
 
            <p>
