--- a/mtw.html
+++ b/mtw.html
@@ -110,7 +110,7 @@
    <li>15:50-16:20. Coffee break</li>
    <li>16:20-18:00. Graph Algorithms session</li>
        <ul>
-           <li>Pravesh Kothari (CMU): <i></i></li>
+           <li>Pravesh Kothari (CMU): <i>Refuting Smoothed k-SAT Formulas and a Proof of Feige's Conjecture</i></li>
            <li>Chris Jones (U. of Chicago): <i>Sum-of-Squares Lower Bounds for Sparse Independent Set</i></li>
        </ul>
    </ul>
