--- a/mtw.html
+++ b/mtw.html
@@ -178,7 +178,7 @@
                <ul>
                    <li>Goran Zuric (ETH Zurich): <i>Approximation Boosting: a Pervasive and Underexplored Feature of Modern Graph Algorithms</i>
                        </li>
-                   <li>Michael Kapralov (EPFL): <i>TBA</i>
+                   <li>Michael Kapralov (EPFL): <i>Spectral hypergraph sparsifiers of nearly linear size</i>
                        </li>
                    </li>
                    </li>
