--- a/mtw.html
+++ b/mtw.html
@@ -87,7 +87,7 @@
     
    <li>9:30-11:10. Graph algorithms session
        <ul>
-           <li>Ola Svensson (EPFL): <i>TBA</i>
+           <li>Ola Svensson (EPFL): <i>Finding Unsplittable Flows and Schedules via Discrepancy Theory</i>
                </li>
            <li>James Lee (U. of Washington): <i>Entropic regularization for general metric spaces</i>
                </li>
