--- a/mtw.html
+++ b/mtw.html
@@ -73,7 +73,7 @@
         <li>16:20-18:50. Cryptography session</li>
             <ul>
                 <li> Omer Paneth (MIT): <i>Incrementally Verifiable Computation and Rate-1 Batch Arguments</I></li>
-                <li>Tal Malkin (Columbia): <i>TBA</i></li>
+                <li>Tal Malkin (Columbia): <i>Unclonable Polymers and Their Cryptographic Applications</i></li>
                 <li>Ran Canetti (Boston U.): <i>COA-Secure Obfuscation and Applications</i></li>
 
             </ul>
