--- a/fai.html
+++ b/fai.html
@@ -55,7 +55,7 @@
         <li>10:00-10:45. <a href=https://faculty.unibocconi.it/orestepollicino/>Oreste Pollicino</a> (Bocconi)
             </li>
         
-        <li>10:45-11:30. <a href=https://sites.google.com/site/sympapadopoulos/>Symeon Papadopoulos</a> (ITI)
+        <li>10:45-11:30. <a href=https://sites.google.com/site/sympapadopoulos/>Symeon Papadopoulos</a> (ITI): <i>AI Bias in Visual Data</i>
             </li>
         
         <li>11:30-11:45. Coffee break
