--- a/fai.html
+++ b/fai.html
@@ -17,7 +17,10 @@
     
     <p>
     
-    Location: Bocconi University, <a href=https://goo.gl/maps/TmBQg7g43CiKeNb18>Roentgen Building</a>, Room AS01
+    Location: Bocconi University, <a href=https://goo.gl/maps/TgQ2Vc9LoXCqjX24A>Velodromo</a>, Room N04
+  
+  <br>
+  (<i>Velodromo</i> is a circular red-brick building at the center of the Bocconi main campus. Entering the campus from Via Bligny it is straight ahead. Entering the campus from Via Roentgen 1, turn left at the Gud coffee shop)
   
   <p>
   
