--- a/fai.html
+++ b/fai.html
@@ -94,7 +94,7 @@
         </li>
 
  
-  <li>17:30-18:15. <a href=https://en.wikipedia.org/wiki/Cynthia_Dwork>Cynthia Dwork</a> (Harvard)
+  <li>17:30-18:15. <a href=https://en.wikipedia.org/wiki/Cynthia_Dwork>Cynthia Dwork</a> (Harvard): <i>The Calculus of Inclusion</i>
             </li>
         </ul>
         
