fixed wrong link

--- a/30540/index.html
+++ b/30540/index.html
@@ -119,7 +119,7 @@ and the study of the computational complexity of problems.
 <li>
 2022-02-15: <b>Graph Decomposition II</b><br>
 <i>Contents:</i> Directed acyclic graphs, linearization, DFS finds linearization<br>
-<i>Readings:</i> Section 3.3 and <a href=notes-02-12.pdf>Notes on topological sort</a><br>
+<i>Readings:</i> Section 3.3<br>
 <i>Instructor:</i> Iozzi<br>
 <i>Suggested Exercises:</i> <br>
 </li>
