fixed wrong link

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -114,7 +114,7 @@ Spring 14:</td><td> <b><a href=cs103-14/index.html>CS103: Mathematics for Comput
 <tr>
     <td>Spring21:
         </td>
-    <td><b><a href="../30540/index.html">30540 Computer Science 2</a></b> (BAI)
+    <td><b><a href="../30540-21/index.html">30540 Computer Science 2</a></b> (BAI)
         </td>
     </tr>
 
