update teaching and publications

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -114,10 +114,21 @@ Spring 14:</td><td> <b><a href=cs103-14/index.html>CS103: Mathematics for Comput
 <tr>
     <td>Spring21:
         </td>
-    <td><b><a href="../30540/index.html">30540 Computer Science 2</a></b> (BAI)
+    <td><b><a href="../30540-21/index.html">30540 Computer Science 2</a></b> (BAI)
         </td>
     </tr>
 
+<tr>
+    <td>Spring22:
+        </td>
+    <td><b><a href="../41000-22/index.html">41000 Graph Theory</a></b> (PhD course)
+        </td>
+    </tr>
+<tr><td></td>
+    <td><b><a href="../30540-22/index.html">30540 Computer Science 2</a></b> (BAI)
+        </td>
+    </tr?
+    
  
 </tbody>
  </table>
