add giornata teorica 2021

--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@ CUHK<br>
    <li>have chaired the organizing committee for a workshop on <a href=https://simons.berkeley.edu/workshops/si2021-3>average-case complexity in statistical problems</a> at the <a href=https://simons.berkeley.edu/>Simons Institute</a> in Berkeley
    <p>
    
+   <li>co-organized a <a href="2021giornatateorica.pdf">theory day</a> on Dec 13 at Bocconi
+   
+   <p>
+   
    <li>organized a workshop on <a href="mtw.html"><i>spectral and convex optimization techniques in graph algorithms</i></a>,  held in Milan on June 15-18
        
        <p>
