--- a/pubs/by-year.html
+++ b/pubs/by-year.html
@@ -554,7 +554,7 @@ In <i>Proc. of IEEE Conference on Computational Complexity</i>, 2007, pp.205-216
 
   <li><a name="gowers"></a>Alex Samorodnitsky and Luca Trevisan.&nbsp;<br>
 
-    <b>Gowers Uniformity, Influence of Variables, and PCPs<br>
+    <b>Gowers Uniformity, Influence of Variables, and PCPs</b><br>
 
         <i>Siam J. on Computing</i> 39(1): 323-360, 2009<br>
 
