turing award committee

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     Oberwolfach Prize</a>,
      the <a href="http://www.sloan.org/sloan-research-fellowships/">2000
     Sloan Fellowship</a> and an NSF CAREER Award.
-    He was an invited speaker at <a href="https://www.mathunion.org/icm/past-icms">the 2006 International Congress of Mathematicians</a>. In 2019, he received an <a href=https://erc.europa.eu/funding/advanced-grants>ERC Advanced Grant</a>.
+    He was an invited speaker at <a href="https://www.mathunion.org/icm/past-icms">the 2006 International Congress of Mathematicians</a>. In 2019, he received an <a href=https://erc.europa.eu/funding/advanced-grants>ERC Advanced Grant</a>. He is currently serving a five-year term on the <a href=https://amturing.acm.org/committee.cfm>committee that assigns the Turing Award</a>.
      
     <p>
     
