update Oberwolfach prize URL

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <p>Luca's research is in theoretical computer science, with a focus on computational complexity, on the analysis of algorithms,  on the foundations of cryptography, and on topics at the intersection of theoretical computer science and pure mathematics.</p>
 
-    <p>Luca is a <a href=https://awards.acm.org/fellows>Fellow of the ACM</a> and a member of the <a href=https://en.wikipedia.org/wiki/Accademia_nazionale_delle_scienze>Accademia Nazionale delle Scienze</a>, the Italian National Academy of Science. He received the  <a href="http://www.mfo.de/math-in-public/prizes/oberwolfach-prize/prizes-1/">2000
+    <p>Luca is a <a href=https://awards.acm.org/fellows>Fellow of the ACM</a> and a member of the <a href=https://en.wikipedia.org/wiki/Accademia_nazionale_delle_scienze>Accademia Nazionale delle Scienze</a>, the Italian National Academy of Science. He received the  <a href="https://www.mfo.de/outreach-media/prizes/oberwolfach-prize">2000
     Oberwolfach Prize</a>,
      the <a href="http://www.sloan.org/sloan-research-fellowships/">2000
     Sloan Fellowship</a> and an NSF CAREER Award.
