--- a/index.html
+++ b/index.html
@@ -312,6 +312,26 @@ CUHK<br>
    
    <p>
    
+   In 2022-2023, I
+   
+   <ul>
+   
+   <li>coorganized a <a href="2023theoryday.html">Theory Day</a> at Bocconi on January 26, 2023
+       </li>
+   
+   <p>
+   
+   <li>served on the external evaluation committee of the Computer Sciences department at ETH Zurich
+       </li>
+   
+   <p>
+   
+   <li>served on the PE6 review panel for the 2023 ERC Advanced Grants</li>
+   
+   </ul>
+   
+   <p>
+   
    In 2021-2022, I
 <ul>
    <li> have been on the program committee  of <a href=http://acm-stoc.org/stoc2022/>STOC 2022</a>
@@ -327,15 +347,15 @@ CUHK<br>
    <li>have chaired the organizing committee for a workshop on <a href=https://simons.berkeley.edu/workshops/si2021-3>average-case complexity in statistical problems</a> at the <a href=https://simons.berkeley.edu/>Simons Institute</a> in Berkeley
    <p>
    
-   <li>co-organized a <a href="2021giornatateorica.pdf">theory day</a> on Dec 13 at Bocconi
+   <li>co-organized a <a href="2021giornatateorica.pdf">theory day</a> on Dec 13, 2021 at Bocconi
    
    <p>
    
-   <li>organized a workshop on <a href="mtw.html"><i>spectral and convex optimization techniques in graph algorithms</i></a>,  held in Milan on June 15-18
+   <li>organized a workshop on <a href="mtw.html"><i>spectral and convex optimization techniques in graph algorithms</i></a>,  held in Milan on June 15-18, 2022
        
        <p>
        
-    <li>organized a workshop on <a href="fai.html"><i>fairness in artificial intelligence</I></a>,  held in Milan on June 27
+    <li>organized a workshop on <a href="fai.html"><i>fairness in artificial intelligence</I></a>,  held in Milan on June 27, 2022
         </ul>
 
 </div>
