notes for graph theory lecture 1

--- a/41000/index.html
+++ b/41000/index.html
@@ -47,7 +47,11 @@
     <ul>
     
     <li>2022-02-01.
-Laplacian matrix of an undirected graphs, eigenvalues of Laplacian and connectivity.
+Laplacian matrix of an undirected graphs, eigenvalues of Laplacian and connectivity.<br>
+Readings: <a href=lecture00.pdf>[Linear Algebra Review]</a> and <a href=lecture01.pdf>[Notes on Lecture 1]</a>
+
+<p>
+
 
 <li>2022-02-02.
     Spectral algorithms for graph partitioning and their analysis.
