lecture 2 graph theory

--- a/41000/index.html
+++ b/41000/index.html
@@ -54,7 +54,10 @@ Readings: <a href=lecture00.pdf>[Linear Algebra Review]</a> and <a href=lecture0
 
 
 <li>2022-02-02.
-    Spectral algorithms for graph partitioning and their analysis.
+    Spectral algorithms for graph partitioning and their analysis.<br>
+    Readings: <a href=lecture02.pdf>[Notes for Lecture 2]</a>
+    
+    <p>
 
     <li><b>no lecture on February 8</b></li>
     
