--- a/30540/index.html
+++ b/30540/index.html
@@ -4,7 +4,80 @@
   <link rel="stylesheet" href="../luca.css" type="text/css">
 
 <title>Spring 2023 | 30540 Computer Science 2</title>
-
+<style id="30540_2023_schedule_29632_Styles">
+<!--table
+    {mso-displayed-decimal-separator:"\,";
+    mso-displayed-thousand-separator:"\.";}
+@page
+    {margin:.75in .7in .75in .7in;
+    mso-header-margin:.3in;
+    mso-footer-margin:.3in;}
+tr
+    {mso-height-source:auto;}
+col
+    {mso-width-source:auto;}
+br
+    {mso-data-placement:same-cell;}
+.style0
+    {mso-number-format:General;
+    text-align:general;
+    vertical-align:bottom;
+    white-space:nowrap;
+    mso-rotate:0;
+    mso-background-source:auto;
+    mso-pattern:auto;
+    color:black;
+    font-size:11.0pt;
+    font-weight:400;
+    font-style:normal;
+    text-decoration:none;
+    font-family:Calibri, sans-serif;
+    mso-font-charset:0;
+    border:none;
+    mso-protection:locked visible;
+    mso-style-name:Normal;
+    mso-style-id:0;}
+td
+    {mso-style-parent:style0;
+    padding-top:1px;
+    padding-right:1px;
+    padding-left:1px;
+    mso-ignore:padding;
+    color:black;
+    font-size:11.0pt;
+    font-weight:400;
+    font-style:normal;
+    text-decoration:none;
+    font-family:Calibri, sans-serif;
+    mso-font-charset:0;
+    mso-number-format:General;
+    text-align:general;
+    vertical-align:bottom;
+    border:none;
+    mso-background-source:auto;
+    mso-pattern:auto;
+    mso-protection:locked visible;
+    white-space:nowrap;
+    mso-rotate:0;}
+.xl63
+    {mso-style-parent:style0;
+    mso-number-format:"\[$-F400\]h\:mm\:ss\\ AM\/PM";}
+.xl64
+    {mso-style-parent:style0;
+    mso-number-format:"ddd\\ dd\\-mmm\\-yy";}
+.xl65
+    {mso-style-parent:style0;
+    text-align:center;}
+.xl66
+    {mso-style-parent:style0;
+    mso-number-format:"ddd\\ dd\\-mmm\\-yy";
+    text-align:center;}
+.xl67
+    {mso-style-parent:style0;
+    mso-number-format:"ddd\\ dd\\-mmm\\-yy";
+    text-align:right;}
+-->
+</style>
 
 </head>
 
@@ -66,8 +139,375 @@ and the study of the computational complexity of problems.
     <h3>Lecture plan</h3>
     
 
-TBA (will be similar to <a href="../30540-22/index.html">last year's offering</a>)
-
+    <table border=0 cellpadding=2 cellspacing=0 width=1500 style='border-collapse:
+     collapse;table-layout:fixed;width:937pt'>
+     <col width=140 style='mso-width-source:userset;mso-width-alt:4480;width:105pt'>
+     <col width=124 style='mso-width-source:userset;mso-width-alt:3968;width:50pt'>
+     <col width=131 style='mso-width-source:userset;mso-width-alt:4181;width:50pt'>
+     <col class=xl65 width=200 style='mso-width-source:userset;mso-width-alt:2474;
+     width:150pt'>
+     <col width=71 span=11 style='width:53pt'>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 width=140 style='height:15.0pt;width:105pt'></td>
+      <td width=124 style='width:93pt'></td>
+      <td width=131 style='width:98pt'></td>
+      <td class=xl65 width=77 style='width:58pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 07-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=2 style='mso-ignore:colspan'>Introduction</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 09-Feb-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=2 style='mso-ignore:colspan'>Divide &amp; Conquer I</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 10-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=2 style='mso-ignore:colspan'>Divide &amp; Conquer II</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 14-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=3 style='mso-ignore:colspan'>Graph Decomposition I</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 16-Feb-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=3 style='mso-ignore:colspan'>Graph Decomposition II</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 17-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=2 style='mso-ignore:colspan'>Review, exercises</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl65 style='height:15.0pt'>ASSIGNMENT 1</td>
+      <td class=xl63></td>
+      <td class=xl63></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 21-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=2 style='mso-ignore:colspan'>Shortest Path I: BFS</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 23-Feb-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=3 style='mso-ignore:colspan'>Shortest Path II: Dijkstra</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 24-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=5 style='mso-ignore:colspan'>Shortest Path III: Dijkstra
+      (concl.), Priority Queues</td>
+      <td colspan=6 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 28-Feb-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=2 style='mso-ignore:colspan'>Greedy I: MST</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 02-Mar-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 03-Mar-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=3 style='mso-ignore:colspan'>Greedy II: Kruskal, Prim</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl66 style='height:15.0pt'>ASSIGNMENT 2</td>
+      <td class=xl63></td>
+      <td class=xl63></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 07-Mar-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=4 style='mso-ignore:colspan'>Greedy III: Huffman &amp; Data
+      Compression</td>
+      <td colspan=7 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 09-Mar-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 10-Mar-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=3 style='mso-ignore:colspan'>Greedy IV: Entropy, Set Cover</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 style='height:15.0pt'></td>
+      <td class=xl63></td>
+      <td class=xl63></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl67 style='height:15.0pt'>Mon 20-Mar-23</td>
+      <td class=xl63 align=right>14:00:00</td>
+      <td class=xl63></td>
+      <td class=xl65>MIDTERM</td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl67 style='height:15.0pt'></td>
+      <td class=xl63></td>
+      <td class=xl63></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 23-Mar-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=5 style='mso-ignore:colspan'>Dynamic programming I: Shortest path
+      in DAGs</td>
+      <td colspan=6 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 24-Mar-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=11 style='mso-ignore:colspan'>Dynamic programming II: Shortest
+      paths with negative weights. All-pairs shortest paths. Rethinking Dijkstra's
+      algorithm</td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 28-Mar-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=5 style='mso-ignore:colspan'>Dynamic programming III: Edit
+      distance, knapsack</td>
+      <td colspan=6 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 30-Mar-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 04-Apr-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=10 style='mso-ignore:colspan'>Flows I: Flows in networks,
+      residual network, Ford-Fulkerson, Max flow min cut theorem, analysis of
+      Edmonds-Karp</td>
+      <td></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 06-Apr-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 07-Apr-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=6 style='mso-ignore:colspan'>Flows II: Reduction to other
+      problems, Karger's min cut algorithms</td>
+      <td colspan=5 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl66 style='height:15.0pt'>ASSIGNMENT 3</td>
+      <td class=xl63></td>
+      <td class=xl63></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 18-Apr-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=3 style='mso-ignore:colspan'>LP 1: example problems</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 20-Apr-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=3 style='mso-ignore:colspan'>LP II: the simplex algorithm</td>
+      <td colspan=8 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 21-Apr-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=2 style='mso-ignore:colspan'>LP III: Duality</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 27-Apr-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65>IOZZI</td>
+      <td colspan=2 style='mso-ignore:colspan'>LP IV: Game Theory</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 28-Apr-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=9 style='mso-ignore:colspan'>NP-completeness I: Combinatorial
+      explosion, search problems, P, NP, reductions, NP-completeness</td>
+      <td colspan=2 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 02-May-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=8 style='mso-ignore:colspan'>NP-completeness II: NP-completeness
+      of Independent Set, Clique, Set Cover, Subset Sum</td>
+      <td colspan=3 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 04-May-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 05-May-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=9 style='mso-ignore:colspan'>NP-completeness III: NP-completeness
+      of Partition, Bin Packing, Scheduling, Hamiltonian Circuit, TSP</td>
+      <td colspan=2 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Tue 09-May-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=8 style='mso-ignore:colspan'>NP-completeness IV: Boolean
+      circuits, and NP-completeness of Circuits SAT and 3SAT</td>
+      <td colspan=3 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Thu 11-May-23</td>
+      <td class=xl63 align=right>08:30:00</td>
+      <td class=xl63 align=right>10:00:00</td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 align=right style='height:15.0pt'>Fri 12-May-23</td>
+      <td class=xl63 align=right>13:45:00</td>
+      <td class=xl63 align=right>16:15:00</td>
+      <td class=xl65>TREVISAN</td>
+      <td colspan=2 style='mso-ignore:colspan'>Final review</td>
+      <td colspan=9 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 style='height:15.0pt'></td>
+      <td colspan=2 style='mso-ignore:colspan'></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <tr height=20 style='height:15.0pt'>
+      <td height=20 class=xl64 style='height:15.0pt'></td>
+      <td colspan=2 style='mso-ignore:colspan'></td>
+      <td class=xl65></td>
+      <td colspan=11 style='mso-ignore:colspan'></td>
+     </tr>
+     <![if supportMisalignedColumns]>
+     <tr height=0 style='display:none'>
+      <td width=140 style='width:105pt'></td>
+      <td width=124 style='width:93pt'></td>
+      <td width=131 style='width:98pt'></td>
+      <td width=77 style='width:58pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+      <td width=71 style='width:53pt'></td>
+     </tr>
+     <![endif]>
+    </table>
 </body>
 
 </html>
