lecture 3 graph theory

--- a/41000/index.html
+++ b/41000/index.html
@@ -62,7 +62,10 @@ Readings: <a href=lecture00.pdf>[Linear Algebra Review]</a> and <a href=lecture0
     <li><b>no lecture on February 8</b></li>
     
     <li>2022-02-09.
-    Other connection between Laplacian eigenvalues and combinatorial properties.
+    Proof of Cheeger's inequality.<br>
+    Readings: <a href=lecture03.pdf>[Notes for Lecture 3]</a>
+
+    <p>
     
     <li>2022-02-14, 16:30-18:00 (note unusual day and time).
         Spectrum of the adjacency matrix of random graphs, Matrix Chernoff bounds, applications.
