graph theory lecture 4

--- a/41000/index.html
+++ b/41000/index.html
@@ -68,7 +68,12 @@ Readings: <a href=lecture00.pdf>[Linear Algebra Review]</a> and <a href=lecture0
     <p>
     
     <li>2022-02-14, 16:30-18:00 (note unusual day and time).
-        Spectrum of the adjacency matrix of random graphs, Matrix Chernoff bounds, applications.
+        Spectrum of the adjacency matrix of random graphs, Matrix Chernoff bounds, applications.<br>
+        Readings: <a href=lecture03.pdf>[Notes for Lecture 3]</a><br>
+        We also discussed Cheeger's inequality in manifolds and Buser's inequality: you can find an informal treatment <a href=https://lucatrevisan.wordpress.com/2013/03/20/the-cheeger-inequality-in-manifolds/>[here]</a>, <a href=https://lucatrevisan.wordpress.com/2013/03/21/proof-of-the-cheeger-inequality-in-manifolds/>[here]</a>, and <a href=https://lucatrevisan.wordpress.com/2021/10/07/buser-inequalities-in-graphs/>[here]</a>.
+
+        <p>
+        
     <li>2022-02-15.
         Bounding the operator norm of a random matrix: epsilon-nets and trace methods.
     <li>2022-02-16.
