graph theory notes for lecture 6

--- a/41000/index.html
+++ b/41000/index.html
@@ -83,8 +83,11 @@ Readings: <a href=lecture00.pdf>[Linear Algebra Review]</a> and <a href=lecture0
         <p>
         
     <li>2022-02-16.
-        Spectral algorithms for finding planted cliques in random graphs.
+        Spectral algorithms for finding planted cliques in random graphs.<br>
+        Readings: <a href=lecture06.pdf>[Notes for Lecture 6]</a><br>
 
+
+<p>
 
 <li>2022-02-22.
 More on community detection, and an introduction to Semidefinite programming.
