spectral graph theory lecture 7

--- a/41000/index.html
+++ b/41000/index.html
@@ -90,7 +90,11 @@ Readings: <a href=lecture00.pdf>[Linear Algebra Review]</a> and <a href=lecture0
 <p>
 
 <li>2022-02-22.
-More on community detection, and an introduction to Semidefinite programming.
+More on community detection, and an introduction to Semidefinite programming.<br>
+Readings: <a href=lecture07.pdf>[Notes for Lecture 7]</a><br>
+
+
+<p>
     <li>2022-02-23.
         Grothendieck inequality, and SDP for approximate community detection in the stochastic block model.
     <li>2022-03-01.
