lecture 8 graph theory course

--- a/41000/index.html
+++ b/41000/index.html
@@ -97,6 +97,11 @@ Readings: <a href=lecture07.pdf>[Notes for Lecture 7]</a><br>
 <p>
     <li>2022-02-23.
         Grothendieck inequality, and SDP for approximate community detection in the stochastic block model.
+        Readings: <a href=lecture08.pdf>[Notes for Lecture 8]</a><br>
+
+
+        <p>
+
     <li>2022-03-01.
         SDP for exact community detection in the stochastic block model.
        
