--- a/41000/index.html
+++ b/41000/index.html
@@ -96,7 +96,7 @@ Readings: <a href=lecture07.pdf>[Notes for Lecture 7]</a><br>
 
 <p>
     <li>2022-02-23.
-        Grothendieck inequality, and SDP for approximate community detection in the stochastic block model.
+        Grothendieck inequality, and SDP for approximate community detection in the stochastic block model.<br>
         Readings: <a href=lecture08.pdf>[Notes for Lecture 8]</a><br>
 
 
