lecture 9 graph theory course, typo fixed lecture 8

--- a/41000/index.html
+++ b/41000/index.html
@@ -103,7 +103,10 @@ Readings: <a href=lecture07.pdf>[Notes for Lecture 7]</a><br>
         <p>
 
     <li>2022-03-01.
-        SDP for exact community detection in the stochastic block model.
+        SDP for exact community detection in the stochastic block model.<br>
+        Readings: <a href=lecture09.pdf>[Notes for Lecture 9]</a><br>
+
+        <p>
        
 <li>2022-03-02.
     SDP for planted clique and a study of robustness.
