lecture 10 graph theory course

--- a/41000/index.html
+++ b/41000/index.html
@@ -109,7 +109,11 @@ Readings: <a href=lecture07.pdf>[Notes for Lecture 7]</a><br>
         <p>
        
 <li>2022-03-02.
-    SDP for planted clique and a study of robustness.
+    SDP for planted clique and a study of robustness.<br>
+    Readings: <a href=lecture10.pdf>[Notes for Lecture 10]</a><br>
+
+    <p>
+   
 <li>2022-03-08.
     Eigenvalues and eigenvectors of Cayley graphs.
 <li>2022-03-09.
