--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <p>
 
     Luca Trevisan is
-    a Professor of Computer Science at Bocconi University, where he holds the Invernizzi Foundation Chair in Computer Science.
+    a Professor of Computer Science at Bocconi University, where he holds the Invernizzi Foundation Chair in Computer Science. He is the founding director of Bocconi's new <a href=https://www.unibocconi.eu/ai-msc>M.Sc. in Artificial Intelligence</a> that starts in Fall 2023.
     Luca received his Dottorato (PhD) in 1997,
     from the <i>Sapienza</i> University of Rome, working with Pierluigi Crescenzi.
     After graduating, Luca was a post-doc at MIT and at DIMACS, and he was
