uploaded updated lecture notes for cs2

--- a/30540/index.html
+++ b/30540/index.html
@@ -64,6 +64,14 @@ and the study of the computational complexity of problems.
             </li>
         <li><a href=notes-dijkstra.pdf>Notes on Dijkstra's algorithm</a>
             </li>
+        <li><a href=notes-compression.pdf>Notes on data compression</a>
+            </li>
+        <li><a href=notes-flow.pdf>Notes on maximum flow</a>
+            </li>
+        <li><a href=notes-cut-matching.pdf>Notes on maximum  matching</a>
+            </li>
+        <li><a href=notes-np1.pdf>Notes on NP-completeness part I</a>
+            </li>
         </ul>
     
     
@@ -197,7 +205,7 @@ components in undirected graphs <br>
 </p><li>
 2023-03-07: <b>Greedy Algorithms III</b><br>
 <i>Contents:</i> Prefix codes, Huffman coding<br>
-<i>Readings:</i> Section 5.2, <a href="https://lucatrevisan.github.io/30540-22/notes-compression.pdf">notes</a><br>
+<i>Readings:</i> Section 5.2, <a href=notes-compression.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
@@ -206,7 +214,7 @@ components in undirected graphs <br>
 </p><li>
 2023-03-10: <b>Greedy Algorithms IV</b><br>
 <i>Contents:</i> More on data compression, entropy; set cover<br>
-<i>Readings:</i> Section 5.2, 5.4<a href="https://lucatrevisan.github.io/30540-22/notes-compression.pdf">notes</a><br>
+<i>Readings:</i> Section 5.2, 5.4<a href=notes-compression.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
@@ -243,7 +251,7 @@ components in undirected graphs <br>
 </p></li><li>
 2023-04-04: <b>Flows I</b><br>
 <i>Contents:</i> Flows in networks, residual network, Ford-Fulkerson, Max flow min cut theorem, analysis of Edmonds-Karp<br>
-<i>Readings:</i> Section 7.2, <a href="https://lucatrevisan.github.io/30540-22/notes-flow.pdf">notes</a><br>
+<i>Readings:</i> Section 7.2, <a href=notes-flow.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
@@ -251,7 +259,7 @@ components in undirected graphs <br>
 </p><li>
 2023-04-07: <b>Flows II</b><br>
 <i>Contents:</i> Reduction to other problems, Karger's min cut algorithms<br>
-<i>Readings:</i> <a href="https://lucatrevisan.github.io/30540-22/notes-cut-matching.pdf">Notes</a>, Section 7.3<br>
+<i>Readings:</i> <a href=notes-cut-matching.pdf>Notes</a>, Section 7.3<br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
@@ -296,7 +304,7 @@ components in undirected graphs <br>
 </p><li>
 2023-04-28: <b>NP-completeness I</b><br>
 <i>Contents:</i> Combinatorial explosion, search problems, P, NP, reductions, NP-completeness<br>
-<i>Readings:</i> Section 8.1, <a href="https://lucatrevisan.github.io/30540-22/notes-np1.pdf">notes</a><br>
+<i>Readings:</i> Section 8.1, <a href=notes-np1.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
