--- a/30540/index.html
+++ b/30540/index.html
@@ -72,6 +72,11 @@ and the study of the computational complexity of problems.
             </li>
         <li><a href=notes-np1.pdf>Notes on NP-completeness part I</a>
             </li>
+        <li><a href=notes-np2.pdf>Notes on NP-completeness part II</a>
+            </li>
+        <li><a href=notes-np3.pdf>Notes on NP-completeness part III</a>
+            </li>
+        <li><a href=HamiltonianCircuit.pdf>Reduction from Vertex Cover to Hamiltonian Circuit</a>
         </ul>
     
     
@@ -311,16 +316,16 @@ components in undirected graphs <br>
 <p>
 </p><li>
 2023-05-02: <b>NP-completeness II</b><br>
-<i>Contents:</i>  NP-completeness of Independent Set, Clique, Set Cover, Subset Sum<br>
-<i>Readings:</i> Sections 8.2 and 8.3, <a href="https://lucatrevisan.github.io/30540-22/notes-np2.pdf">notes</a><br>
+<i>Contents:</i>  NP-completeness of Independent Set and Subset Sum<br>
+<i>Readings:</i> Sections 8.2 and 8.3, <a href=notes-np2.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
 <p>
 </p><li>
 2023-05-05: <b>NP-completeness III</b><br>
-<i>Contents:</i> NP-completeness of Partition, Bin Packing, Scheduling, Hamiltonian Circuit, TSP<br>
-<i>Readings:</i> Section 8.3 and <a href="https://lucatrevisan.github.io/30540-22/notes-np3.pdf">notes</a><br>
+<i>Contents:</i> NP-completeness of Set Cover, Partition, Bin Packing, Scheduling, Hamiltonian Circuit, TSP<br>
+<i>Readings:</i> Section 8.3,  <a href=notes-np3.pdf>notes</a>, and <a href=HamiltonianCircuit.pdf>reduction to Hamiltonian Circuit</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
