--- a/30540/index.html
+++ b/30540/index.html
@@ -77,6 +77,10 @@ and the study of the computational complexity of problems.
         <li><a href=notes-np3.pdf>Notes on NP-completeness part III</a>
             </li>
         <li><a href=HamiltonianCircuit.pdf>Reduction from Vertex Cover to Hamiltonian Circuit</a>
+            </li>
+        <li><a href=notes-np4.pdf>Notes on NP-completeness part IV</a>
+            </li>
+ 
         </ul>
     
     
@@ -333,7 +337,7 @@ components in undirected graphs <br>
 
 2023-05-09: <b>NP-completeness IV</b><br>
 <i>Contents:</i> Boolean circuits, and NP-completeness of Circuits SAT and 3SAT<br>
-<i>Readings:</i> <a href="https://lucatrevisan.github.io/30540-22/notes-np4.pdf">notes</a><br>
+<i>Readings:</i> <a href="notes-np4.pdf">notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 
