--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@ Postdocs:
                         
 Students: 
 <ul>
-    <li><a href=https://lucaspesenti.github.io/>Lucas Pesenti</a></li>
+    <li>Caicai Chen</li>
+  <li><a href=https://lucaspesenti.github.io/>Lucas Pesenti</a></li>
     <li><a href=https://jiyuzhang1994.github.io/>Jiyu Zhang</a></li>
     </ul>
 
